@@ -1,0 +1,2 @@
+prog: shm
+vgopts: -q
